@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10]
+        python-version: [3.8, 3.9, '3.10']
     steps:
     - uses: actions/checkout@v2
 
@@ -24,9 +24,6 @@ jobs:
     - name: Generate static files
       run: |
         make doc
-    - name: Test on python 3.8, 3.9, 3.10
-      run: |
-        make tox
     - name: Deploy to GH Pages 🚀
       uses: peaceiris/actions-gh-pages@v3
       with:
